unpackaged/main/default/objects/zkfedex__InternationalCommodity__c/zkfedex__InternationalCommodity__c.object-meta.xml
<CustomObject>
    <customHelpPage>zkfedex__internationalCommodityHelp</customHelpPage>
    <description>International Commodity stores international data used when sending a FedEx shipment international.</description>
    <label>FedEx International Commodity</label>
    <nameField>
        <displayFormat>IC-{0000000000}</displayFormat>
        <label>International Commodity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx International Commodities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>