unpackaged/main/default/objects/zkfedex__InternationalCommodity__c/fields/zkfedex__InternationalCommodityData__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__InternationalCommodityData__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>International Commodity Data</label>
    <referenceTo>zkfedex__InternationalCommodityData__c</referenceTo>
    <relationshipLabel>FedEx International Commodities</relationshipLabel>
    <relationshipName>FedEx_International_Commodities</relationshipName>
    <type>Lookup</type>
</CustomField>