unpackaged/main/default/objects/zkfedex__InternationalCommodity__c/fields/zkfedex__NaftaNetCostMethod__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NaftaNetCostMethod__c</fullName>
    <label>Net Cost Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>