unpackaged/main/default/objects/zkfedex__InternationalCommodity__c/fields/zkfedex__NaftaPreferenceCriterion__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NaftaPreferenceCriterion__c</fullName>
    <description>Defined by NAFTA regulations</description>
    <inlineHelpText>Defined by NAFTA regulations</inlineHelpText>
    <label>Preference Criterion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>