unpackaged/main/default/objects/zkfedex__InternationalCommodity__c/fields/zkfedex__NumberOfPieces__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NumberOfPieces__c</fullName>
    <description>Describes the number of boxes within a package. The boxes contain the commodity.</description>
    <inlineHelpText>Describes the number of boxes within a package. The boxes contain the commodity.</inlineHelpText>
    <label>Number of Pieces</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>