unpackaged/main/default/objects/zkfedex__InternationalCommodity__c/fields/zkfedex__PartNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PartNumber__c</fullName>
    <label>Part Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>