unpackaged/main/default/objects/zkfedex__InternationalCommodity__c/fields/zkfedex__SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SequenceNumber__c</fullName>
    <description>The sequence number for the package this commodity is within</description>
    <inlineHelpText>The sequence number for the package this commodity is within</inlineHelpText>
    <label>Package Sequence Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>