unpackaged/main/default/objects/zkfedex__InternationalCommodity__c/fields/zkfedex__TrackingId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__TrackingId__c</fullName>
    <description>The tracking number for the package this commodity is within</description>
    <inlineHelpText>The tracking number for the package this commodity is within</inlineHelpText>
    <label>Package Tracking Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>