unpackaged/main/default/objects/zkfedex__InternationalCommodity__c/fields/zkfedex__UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__UnitPrice__c</fullName>
    <label>Unit Price</label>
    <precision>17</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>